--- a/_config.yml
+++ b/_config.yml
@@ -4,5 +4,20 @@ highlighter: rouge
 sass:
   style: compressed
 languages: ['ru', 'en']
-exclude_from_localizations: ["assets", "CNAME"]
 defaultLang: ru
+defaults:
+  - scope:
+      path: ''
+    values:
+      lang: 'ru'
+      layout: 'default'
+  - scope:
+      path: 'en'
+    values:
+      lang: 'en'
+
+gems:
+  - jekyll-paginate
+
+paginate: 10
+paginate_path: "/:num"
