--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,12 +2,8 @@ languages:
   - language: 'ru'
     links:
       - title: 'Резюме'
-        url: '/hh'
-      - title: 'Работы'
-        url: '/works'
+        url: '/cv'
   - language: 'en'
     links:
       - title: 'CV'
-        url: '/hh'
-      - title: 'Works'
-        url: '/works'
+        url: '/cv'
